css: Fix horizontal scroller position

--- a/css/simple.css
+++ b/css/simple.css
@@ -122,9 +122,7 @@ img#close {
     margin-left: auto;
     margin-right: auto;
     position: relative;
-    top: 100px;
     width: 586px;
-    // z-index: -1; // was breaking the buttons, not sure why its there?
 }
 
 #canvas {
@@ -182,7 +180,7 @@ img#close {
     border: medium none;
 }
 
-/*********************TESTING***********************/
+/*********************SCROLLER***********************/
 
 #scroller {
     clear: both;
@@ -194,7 +192,7 @@ img#close {
     top: 400px;
     z-index: 5;
     left: 125px;
-    top: 425px;
+    top: 325px;
     width: 550px;
 }
 .scrollingtext {
